--- a/Practica5_Datos_Anomalos_MarselJuan.Rmd
+++ b/Practica5_Datos_Anomalos_MarselJuan.Rmd
@@ -80,6 +80,7 @@ Inspecciona visualmente los valores del conjunto de datos (`View`) y ordena de m
 # Medidas con valores faltantes, longitudes negativas y cero
 # View(dirty_iris)
 library(tidyverse)
+
 dirty_iris %>% arrange(Sepal.Length)
 dirty_iris %>% arrange(Sepal.Width)
 dirty_iris %>% arrange(Petal.Length)
@@ -238,8 +239,6 @@ Nota: podría extenderse la aplicación a todas las variables numéricas usando 
 
 ```{r Solucion ejercicio 6, include=TRUE, echo=TRUE, eval=TRUE, results=TRUE}
 df_outliers<-clean_iris %>%mutate(across(.cols=where(is.numeric),.fns=list(reglasigma=~reglasigma(.x),reglahampel=~reglahampel(.x),mreglaboxplot=~reglaboxplot(.x),reglapercentil=~reglapercentil(.x))))
-
-
 ```
 
 ## Ejercicio 7: Comparativa de los métodos de detección de outliers
@@ -325,6 +324,7 @@ Se puede realizar una imputación generalizada (usando todos los valores de la v
   * Imputa los missing data en `Petal.Length` empleando la media. Nota: Puedes reemplazar los valores vacios usando `mutate` con `ifelse` creando una nueva variable `Petal.Length1`.
 
 ```{r Solucion ejercicio 9a, include=TRUE, echo=TRUE, eval=TRUE, results=TRUE}
+df_imputed<-df_outliers %>%  mutate(Petal.Length1=ifelse(is.na(Petal.Length),mean(Petal.Length),Petal.Length))
 
 ```
 
@@ -332,6 +332,8 @@ Se puede realizar una imputación generalizada (usando todos los valores de la v
 
 ```{r Solucion ejercicio 9b, include=TRUE, echo=TRUE, eval=TRUE, results=TRUE}
 
+df_outliers %>% group_by(Species) %>% 
+  mutate(Petal.Length2=ifelse(is.na(Petal.Length),mean(Petal.Length),Petal.Length))
 
 ```
 
